syntax = "proto3";

option go_package = "auth/internal/auth";
package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc RefreshToken (RefreshTokenRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refreshToken = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool isValid = 1;
}

message RegisterRequest {
  string email = 1;
  string password = 4;
}

message RegisterResponse {
  string userId = 1;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}
